# pandoc_to_markdown

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
.claude/skills/pandoc_to_markdown/: README.md  SKILL.md  pandoc_to_markdown_skill.py
scripts/: download_models.py  register_skill.py  setup_env.py
src/pandoc_to_markdown/: bootstrap.py  cli.py  config.py  doctor.py  installer.py  markdown_postprocess.py  model_metadata.py  routing.py
src/pandoc_to_markdown/converters/: marker_backend.py  mineru_backend.py  pandoc_backend.py
tasks/: lessons.md  todo.md
tests/: test_cli.py  test_doctor.py  test_installer.py  test_markdown_postprocess.py  test_marker_backend.py  test_mineru_backend.py  test_model_metadata.py  test_pandoc_to_markdown_skill.py  test_routing.py
